# gcode-rs

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE_MIT.md  README.md  appveyor.yml  build.rs  cbindgen.toml  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.Array.html
benches/: example_files.rs  main.rs
cfg_if/: all.html  index.html  macro.cfg_if.html
ci/: before_deploy.ps1  before_deploy.sh  deploy.sh  install.sh  script.sh
doc_cfg/: all.html  attr.doc_cfg.html  index.html  sidebar-items.js
document_features/: all.html  index.html  macro.document_features.html
examples/: basic-usage.rs  basic.rs  cli-reader.rs  pretty_print_visitor.rs
ffi/: Cargo.toml  package.sh
ffi-example/: .gitignore  Makefile  main.c
ffi/src/: lib.rs
fuzz/: Cargo.toml
gcode/: Cargo.toml  all.html  cbindgen.toml  enum.Code.html  enum.CommentKind.html  enum.DiagnosticKind.html  enum.Mnemonic.html  enum.Value.html  fn.full_parse_with_callbacks.html  fn.parse.html  index.html  sidebar-items.js  struct.Argument.html  struct.AstBuilder.html  struct.Block.html  struct.Comment.html  struct.Diagnostic.html  struct.Diagnostics.html  struct.GCode.html  struct.GeneralCode.html  struct.Line.html  struct.MiscellaneousCode.html  struct.Nop.html  struct.Parser.html  struct.Program.html  struct.Span.html  struct.ToolChangeCode.html  struct.Word.html  struct.WordAddress.html  trait.Callbacks.html
gcode-ffi/: Cargo.toml  build.rs  cbindgen.toml  example.c  package.sh
gcode-ffi/examples/: .gitignore  Makefile  basic_usage.c
gcode-ffi/src/: lib.rs
gcode-ffi/tests/: run_c_example.rs
gcode-simulator/: Cargo.toml
gcode-simulator/src/: lib.rs  operations.rs  simulator.rs  state.rs
gcode-simulator/src/operations/: coordinate_modes.rs  dwell.rs  helpers.rs  linear_interpolate.rs  mod.rs  units.rs
gcode-simulator/src/sim/: mod.rs
gcode/ast/: enum.Code.html  enum.CommentKind.html  enum.Value.html  fn.parse.html  index.html  sidebar-items.js  struct.Argument.html  struct.AstBuilder.html  struct.Block.html  struct.Comment.html  struct.Diagnostic.html  struct.Diagnostics.html  struct.GeneralCode.html  struct.MiscellaneousCode.html  struct.Program.html  struct.ToolChangeCode.html  struct.WordAddress.html
gcode/ast/diags/: struct.Diagnostic.html  struct.Diagnostics.html
gcode/ast/types/: enum.Code.html  enum.CommentKind.html  enum.Value.html  struct.Argument.html  struct.Block.html  struct.Comment.html  struct.GeneralCode.html  struct.MiscellaneousCode.html  struct.Program.html  struct.ToolChangeCode.html  struct.WordAddress.html
gcode/ast/visitor/: struct.AstBuilder.html
gcode/benches/: example_files.rs
gcode/buffers/: enum.SmallFixedBuffers.html  enum.VecBuffers.html  index.html  sidebar-items.js  struct.CapacityError.html  trait.Buffer.html  trait.Buffers.html  type.DefaultArguments.html  type.DefaultBuffers.html
gcode/callbacks/: struct.Nop.html  trait.Callbacks.html
gcode/core/: enum.TokenType.html  enum.Value.html  fn.parse.html  fn.resume.html  index.html  sidebar-items.js  struct.Noop.html  struct.Number.html  struct.ParserState.html  struct.Span.html  trait.BlockVisitor.html  trait.CommandVisitor.html  trait.Diagnostics.html  trait.HasDiagnostics.html  trait.ProgramVisitor.html  type.ControlFlow.html
gcode/core/parser/: fn.resume.html  struct.ParserState.html
gcode/core/types/: enum.TokenType.html  enum.Value.html  struct.Noop.html  struct.Number.html  struct.Span.html  trait.BlockVisitor.html  trait.CommandVisitor.html  trait.Diagnostics.html  trait.HasDiagnostics.html  trait.ProgramVisitor.html  type.ControlFlow.html
gcode/diags/: enum.DiagnosticKind.html  struct.Diagnostic.html  struct.Diagnostics.html
gcode/examples/: .gitignore  basic-usage.rs  basic_usage.c  cli-reader.rs  incremental-parsing.rs  more_complex.rs  print_all_gcodes.rs
gcode/gcode/: enum.Mnemonic.html  struct.GCode.html
gcode/line/: struct.Line.html
gcode/parser/: fn.full_parse_with_callbacks.html  fn.parse.html  struct.Parser.html
gcode/span/: struct.Span.html
gcode/src/: buffers.rs  builder.rs  callbacks.rs  comment.rs  ffi.rs  gcode.rs  lexer.rs  lib.rs  line.rs  lines.rs  macros.rs  parser.rs  span.rs  transforms.rs  types.rs  words.rs
gcode/src/syntax/: lexer.rs  mod.rs  parser.rs
gcode/src/transforms/: mod.rs  predicate.rs
gcode/tests/: read_gcodes.rs  smoke_test.rs
gcode/tests/data/: program_1.gcode  program_4.gcode
gcode/types/: enum.Code.html  enum.CommentKind.html  enum.Value.html  struct.Argument.html  struct.Block.html  struct.Comment.html  struct.GeneralCode.html  struct.MiscellaneousCode.html  struct.Program.html  struct.ToolChangeCode.html  struct.WordAddress.html
gcode/visitor/: struct.AstBuilder.html
gcode/words/: struct.Word.html
kinematics/: Cargo.toml
libm/: all.html  fn.acos.html  fn.acosf.html  fn.acosh.html  fn.acoshf.html  fn.asin.html  fn.asinf.html  fn.asinh.html  fn.asinhf.html  fn.atan.html  fn.atan2.html  fn.atan2f.html  fn.atanf.html  fn.atanh.html  fn.atanhf.html  fn.cbrt.html  fn.cbrtf.html  fn.ceil.html  fn.ceilf.html  fn.copysign.html  fn.copysignf.html  fn.cos.html  fn.cosf.html  fn.cosh.html  fn.coshf.html  fn.erf.html  fn.erfc.html  fn.erfcf.html  fn.erff.html  fn.exp.html  fn.exp10.html  fn.exp10f.html  fn.exp2.html  fn.exp2f.html  fn.expf.html  fn.expm1.html  fn.expm1f.html  fn.fabs.html  fn.fabsf.html  fn.fdim.html  (+87 more)
litrs/: all.html  enum.BoolLit.html  enum.FloatType.html  enum.IntegerBase.html  enum.IntegerType.html  enum.Literal.html  index.html  sidebar-items.js  struct.ByteLit.html  struct.ByteStringLit.html  struct.CStringLit.html  struct.CharLit.html  (+7 more)
wasm/: .gitignore  Cargo.toml  bootstrap.js  jest.config.js  package.json  tsconfig.json  webpack.config.js
wasm/js/: index.ts
wasm/rust/: callbacks.rs  lib.rs  parser.rs  simple_wrappers.rs
wasm/ts/: index.test.ts  index.ts
(+910 files in other folders)
