[package]
name = "gcode"
version = "0.6.2-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A gcode parser for no-std applications."
repository = "https://github.com/Michael-F-Bryan/gcode-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gcode", "parser"]
categories = ["no-std", "parser-implementations", "embedded"]
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rust-version = "1.85"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["arrayvec/std"]
serde-1 = ["serde", "serde_derive", "arrayvec/serde"]

[dependencies]
cfg-if = "1.0"
arrayvec = { version = "0.5", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
libm = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
