[package]
name = "gcode"
version = "0.6.2-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A gcode parser for no-std applications."
repository = "https://github.com/Michael-F-Bryan/gcode-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gcode", "parser"]
categories = ["no-std", "parser-implementations", "embedded"]
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
rust-version = "1.85"
features = ["unstable-doc-cfg"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["alloc", "serde"]
alloc = []
serde = ["dep:serde"]
unstable-doc-cfg = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
libm = "0.2"
doc-cfg = "0.1.0"

[dev-dependencies]
insta = "1.46.3"
pretty_assertions = "1.4"
