[package]
name = "gcode"
version = "0.7.0-alpha"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A gcode parser for no-std applications."
repository = "https://github.com/Michael-F-Bryan/gcode-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gcode", "parser"]
categories = ["no-std", "parser-implementations", "embedded"]
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
rust-version = "1.85"
features = ["unstable-doc-cfg"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["alloc", "serde"]
## Enables the [`ast`] module and [`parse`], producing a [`Program`] and collecting [`Diagnostics`].
alloc = []
## Enables serialisation and deserialisation of core and AST types via `serde`.
serde = ["dep:serde"]

#! ### Internal Features
#! The following features are not intended for public use.

## Enables rustdoc labels for items gated by features (for docs.rs - requires nightly).
unstable-doc-cfg = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
libm = "0.2"
doc-cfg = "0.1.0"
document-features = "0.2"

[dev-dependencies]
cfg-if = "1.0.4"
insta = "1.46.3"
libtest-mimic = "0.7"
pretty_assertions = "1.4"

[[example]]
name = "pretty_print_visitor"
path = "examples/pretty_print_visitor.rs"

[[test]]
name = "parse_fixtures"
path = "tests/parse_fixtures.rs"
harness = false
