[package]
name = "gcode-ffi"
version = "0.5.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcode = { version = "0.5", features = ["std"] }

[lib]
crate-type = ["cdylib", "staticlib"]
