[package]
name = "gcode-ffi"
version = "0.3.2-alpha.0"
license = "MIT"
repository = "https://github.com/Michael-F-Bryan/gcode-rs"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
keywords = ["gcode", "parser"]
categories = ["no-std", "parser-implementations", "embedded"]
build = "build.rs"

[badges]
appveyor = { repository = "Michael-F-Bryan/gcode-rs" }
travis-ci = { repository = "Michael-F-Bryan/gcode-rs" }

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
gcode = { path = "../gcode" }

[build-dependencies]
cbindgen = "0.6"

[dev-dependencies]
tempfile = "3.0"
