[package]
name = "gcode-simulator"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
gcode = { path = "../gcode" }
libm = "0.1"
sum_type = "0.1.1"
uom = { version = "0.20.1", default-features = false, features = ["f32", "si"] }

[dev-dependencies]
pretty_assertions = "0.5"
approx = "0.3"
