[package]
name = "gcode-simulator"
version = "0.1.0"
edition = "2018"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
gcode = { path = "../gcode", features = ["std"] }
libm = "0.1"
sum_type = "0.1.1"
uom = { version = "0.24.0", default-features = false, features = ["f32", "si"] }
id-arena = "2.2"

[dev-dependencies]
pretty_assertions = "0.6"
approx = "0.3"
