[package]
name = "gcode"
version = "0.5.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A gcode parser for no-std applications."
repository = "https://github.com/Michael-F-Bryan/gcode-rs"
readme = "../README.md"
license = "MIT"
keywords = ["gcode", "parser"]
categories = ["no-std", "parser-implementations", "embedded"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
appveyor = { repository = "Michael-F-Bryan/gcode-rs" }
travis-ci = { repository = "Michael-F-Bryan/gcode-rs" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = []
large_buffers = []
serde-1 = ["serde", "serde_derive"]

[dependencies]
cfg-if = "0.1.9"
arrayvec = "0.4.11"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
