[package]
name = "gcode"
version = "0.6.1"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A gcode parser for no-std applications."
repository = "https://github.com/Michael-F-Bryan/gcode-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gcode", "parser"]
categories = ["no-std", "parser-implementations", "embedded"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
appveyor = { repository = "Michael-F-Bryan/gcode-rs" }
travis-ci = { repository = "Michael-F-Bryan/gcode-rs" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["arrayvec/std"]
serde-1 = ["serde", "serde_derive", "arrayvec/serde"]

[dependencies]
cfg-if = "0.1.9"
arrayvec = { version ="0.5", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
libm = "0.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
