[package]
name = "gcode"
version = "0.6.2-alpha.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "A gcode parser for no-std applications."
repository = "https://github.com/Michael-F-Bryan/gcode-rs"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["gcode", "parser"]
categories = ["no-std", "parser-implementations", "embedded"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
appveyor = { repository = "Michael-F-Bryan/gcode-rs" }
travis-ci = { repository = "Michael-F-Bryan/gcode-rs" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = []

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"

[dev-dependencies]
arrayvec = "0.5.2"
pretty_assertions = "0.6.1"
