[package]
name = "gcode-kinematics"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "Motion planning and simulation built on top of gcode-rs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcode = { path = "../gcode", features = ["std"] }
uom = "0.25.0"
