[package]
name = "wasm"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
wasm-bindgen = "0.2.59"

# we're using "rust/" instead of "src/" to prevent any mix-ups between the Rust
# world and the JS/TS world
[lib]
path = "rust/lib.rs"
crate-type = ["cdylib", "rlib"]
