[package]
name = "gcode-wasm"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
publish = false
description = "WebAssembly bindings for the gcode crate"

[dependencies]
wasm-bindgen = "0.2.59"
gcode = "0.6.0"

# we're using "rust/" instead of "src/" to prevent any mix-ups between the Rust
# world and the JS/TS world
[lib]
path = "rust/lib.rs"
crate-type = ["cdylib", "rlib"]
