[package]
name = "gcode-wasm"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
publish = false
description = "WebAssembly bindings for use in the @michael-f-bryan/gcode package. Not intended for public use."
repository = "https://github.com/Michael-F-Bryan/gcode-rs"
homepage = "https://github.com/Michael-F-Bryan/gcode-rs"
license = "MIT OR Apache-2.0"
keywords = ["gcode", "wasm", "rust"]

[dependencies]
wasm-bindgen = "0.2.59"
gcode = "0.6.0"

# we're using "rust/" instead of "src/" to prevent any mix-ups between the Rust
# world and the JS/TS world
[lib]
path = "rust/lib.rs"
crate-type = ["cdylib", "rlib"]
